# consortium-test

./: .gitignore  README.md  pyproject.toml  test_verification.sh
configs/: default.yaml  exo_pipeline.yaml
docs/: EXO_INTEGRATION_PROGRESS.md  EXO_TRIMMING_CHECKLIST.md  IMPLEMENTATION_PLAN.md  known-issues.md
docs/architecture/: roadmap_to_production.md
docs/architecture/archive/: end_to_end_test_case_v_1_heterogeneous_distributed_inference_with_fuzzy_verification.md
docs/guides/: multi_device_testing.md
docs/reports/: phase_1_core_validation.md
proto/: consortium.proto
src/consortium/: __init__.py
src/consortium/cli/: main.py
src/consortium/coordinator/: __init__.py  auditor.py  failover.py  server.py
src/consortium/core/: __init__.py  pipeline.py  session.py
src/consortium/identity/: signing.py
src/consortium/transport/: __init__.py
src/consortium/worker/: __init__.py  kv_cache.py  model_shard.py  server.py
src/exo/: main.py
src/exo/consortium/: config.py
src/exo/consortium/cli/: __init__.py  main.py
src/exo/consortium/coordinator/: __init__.py  auditor.py  failover.py  server.py
src/exo/consortium/core/: __init__.py  pipeline.py  session.py
src/exo/consortium/exo_integration/: __init__.py  commitment_accumulator.py  coordinator_bridge.py  (+2 more)
src/exo/master/: api.py  placement.py
src/exo/shared/: apply.py
tests/: conftest.py  test_canonicalizer.py  test_identity.py  test_pipeline.py  test_serialization.py
tests/exo_integration/: __init__.py  test_commitment_accumulator.py  test_mlx_canonicalizer.py  test_verified_layer.py
(+12 files in other folders)
